<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.jacksiroke.moodle.LoginActivity">

    <androidx.cardview.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/appicon1" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/credentials"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_login"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:padding="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_passkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:background="@drawable/custom_edit_text1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edit_text1"
                        android:hint="@string/prompt_password"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_button1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:text="@string/action_sign_in_short" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
